--- a/index.html
+++ b/index.html
@@ -513,10 +513,10 @@
                 <button id="up" class="item_up">uP</button>
                 <button id="mushroom" class="item_mushroom">shrO0m</button>
                 <div>
-                    1) select snd left in border line (in game) and hit the representing button <br />
-                    2a) if not flower, the thing is clear, which map you play, 83% :) <br />
+                    1) select 2nd left in border line (in game) and hit the representing button <br />
+                    2a) if not flower, the thing is clear, which map you play, 83% chance :) <br />
                     2b) if flower, select 2nd left in top line, continue with 3)<br />
-                    3) 3 possibilities: star, flower, 10coins, 33% that you can continue<br />
+                    3) 3 possibilities: star, flower, 10coins, 33% that you can continue!!<br />
                 </div>
                 <div>
                     first sign: <span id="firstSign"></span><br>
